Add gnome shortcut desktop example to javafx-with-spring