@@ -30,6 +30,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'net.rgielen:javafx-weaver-spring-boot-starter:1.3.0'
+	implementation 'org.openjfx:javafx-controls:21.0.1'
 	implementation 'org.openjfx:javafx-graphics:21.0.1'
 	implementation 'org.openjfx:javafx-fxml:21.0.1'
 	compileOnly 'org.projectlombok:lombok'
@@ -37,11 +38,12 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	compileOnly 'com.google.inject:guice:7.0.0'
 }
 
 javafx {
-    version = "21"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    version = "21.0.1"
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
@@ -51,4 +53,18 @@ application {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+run {
+    applicationDefaultJvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
+                                 '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
+                                 '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+                                 '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+    ]
+
+    jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED',
+               '--add-exports=javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED',
+               '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+    ]
 }
